storage: split swift driver
Change-Id: I3e791f92a9a3ef19927abb577403521f94418cf8

--- a/setup.cfg
+++ b/setup.cfg
@@ -111,6 +111,7 @@ gnocchi.storage =
 gnocchi.storage.incoming =
     ceph = gnocchi.storage.incoming.ceph:CephStorage
     file = gnocchi.storage.incoming.file:FileStorage
+    swift = gnocchi.storage.incoming.swift:SwiftStorage
 
 gnocchi.indexer =
     mysql = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
