api: use egg entry_point rather than code path
Change-Id: I7ecfafe966572eebea06b40aed2e7e6174e51996

--- a/etc/gnocchi/api-paste.ini
+++ b/etc/gnocchi/api-paste.ini
@@ -30,9 +30,9 @@ paste.app_factory = gnocchi.rest.app:app_factory
 root = gnocchi.rest.V1Controller
 
 [filter:keystone_authtoken]
-paste.filter_factory = keystonemiddleware.auth_token:filter_factory
+use = egg:keystonemiddleware#auth_token
 oslo_config_project = gnocchi
 
 [filter:http_proxy_to_wsgi]
-paste.filter_factory = oslo_middleware.http_proxy_to_wsgi:HTTPProxyToWSGI.factory
+use = egg:oslo.middleware#http_proxy_to_wsgi
 oslo_config_project = gnocchi
