--- a/setup.cfg
+++ b/setup.cfg
@@ -24,13 +24,13 @@ keystone =
     keystonemiddleware>=4.0.0
 mysql =
     pymysql
-    oslo.db>=4.8.0,!=4.13.1,!=4.13.2
+    oslo.db>=4.8.0,!=4.13.1,!=4.13.2,!=4.15.0
     sqlalchemy
     sqlalchemy-utils
     alembic>=0.7.6,!=0.8.1
 postgresql =
     psycopg2
-    oslo.db>=4.8.0,!=4.13.1,!=4.13.2
+    oslo.db>=4.8.0,!=4.13.1,!=4.13.2,!=4.15.0
     sqlalchemy
     sqlalchemy-utils
     alembic>=0.7.6,!=0.8.1
@@ -74,6 +74,7 @@ test =
     os-testr
     testrepository
     testscenarios
+    testresources>=0.2.4 # Apache-2.0/BSD
     testtools>=0.9.38
     WebTest>=2.0.16
     doc8
