Enable H904 hacking check
This makes sure we interpolate log only if needed.

Change-Id: Ib2c9553f2acc59c8bd47561803aebe1b770bcbe8

--- a/tox.ini
+++ b/tox.ini
@@ -120,6 +120,7 @@ commands = pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- {posargs}
 [flake8]
 exclude = .tox,.eggs,doc
 show-source = true
+enable-extensions = H904
 
 [testenv:genconfig]
 deps = .[mysql,postgresql,test,file,ceph,swift,s3]
