--- a/gnocchi/tests/gabbi/gabbits/resource-type.yaml
+++ b/gnocchi/tests/gabbi/gabbits/resource-type.yaml
@@ -6,6 +6,11 @@
 fixtures:
     - ConfigFixture
 
+defaults:
+  request_headers:
+      x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+      x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+
 tests:
 
     - name: list resource type
@@ -222,8 +227,6 @@ tests:
     - name: post invalid resource
       POST: /v1/resource/my_custom_resource
       request_headers:
-          x-user-id: 0fbb2314-8461-4b1a-8013-1fc22f6afc9c
-          x-project-id: f3d41b77-0cc1-4f0b-b94a-1d5be9c0e3ea
           content-type: application/json
       data:
           id: d11edfca-4393-4fda-b94d-b05a3a1b3747
@@ -239,8 +242,6 @@ tests:
     - name: post invalid resource uuid
       POST: $LAST_URL
       request_headers:
-          x-user-id: 0fbb2314-8461-4b1a-8013-1fc22f6afc9c
-          x-project-id: f3d41b77-0cc1-4f0b-b94a-1d5be9c0e3ea
           content-type: application/json
       data:
           id: d11edfca-4393-4fda-b94d-b05a3a1b3747
@@ -258,8 +259,6 @@ tests:
     - name: post custom resource
       POST: $LAST_URL
       request_headers:
-          x-user-id: 0fbb2314-8461-4b1a-8013-1fc22f6afc9c
-          x-project-id: f3d41b77-0cc1-4f0b-b94a-1d5be9c0e3ea
           content-type: application/json
       data:
           id: d11edfca-4393-4fda-b94d-b05a3a1b3747
@@ -276,8 +275,6 @@ tests:
     - name: patch custom resource
       PATCH: /v1/resource/my_custom_resource/d11edfca-4393-4fda-b94d-b05a3a1b3747
       request_headers:
-          x-user-id: 0fbb2314-8461-4b1a-8013-1fc22f6afc9c
-          x-project-id: f3d41b77-0cc1-4f0b-b94a-1d5be9c0e3ea
           content-type: application/json
       data:
           name: foo
@@ -303,8 +300,6 @@ tests:
     - name: post resource with default
       POST: /v1/resource/my_custom_resource
       request_headers:
-          x-user-id: 0fbb2314-8461-4b1a-8013-1fc22f6afc9c
-          x-project-id: f3d41b77-0cc1-4f0b-b94a-1d5be9c0e3ea
           content-type: application/json
       data:
           id: c4110aec-6e5c-43fa-b8c5-ffdfbca3ce59
