--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,7 @@ setenv =
 deps = .[test]
    postgresql: .[postgresql,{env:GNOCCHI_STORAGE_DEPS}]
    mysql: .[mysql,{env:GNOCCHI_STORAGE_DEPS}]
+# NOTE(tonyb): This project has chosen to *NOT* consume upper-constraints.txt
 commands =
     doc8 --ignore-path doc/source/rest.rst doc/source
     oslo-config-generator --config-file=etc/gnocchi/gnocchi-config-generator.conf
