tests: functional with tox+pifpaf
Change-Id: I7d609a778c7c8592a3c7847e62b832d3805a71f4

--- a/tox.ini
+++ b/tox.ini
@@ -19,20 +19,30 @@ setenv =
     postgresql: GNOCCHI_TEST_INDEXER_DRIVERS=postgresql
     mysql: GNOCCHI_TEST_INDEXER_DRIVERS=mysql
 
-    GNOCCHI_STORAGE_DEPS=file,swift,s3,ceph,ceph_recommended_lib,redis
+    GNOCCHI_STORAGE_DEPS=file,swift,test-swift,s3,ceph,ceph_recommended_lib,redis
     ceph: GNOCCHI_STORAGE_DEPS=ceph,ceph_recommended_lib
-    swift: GNOCCHI_STORAGE_DEPS=swift
+    swift: GNOCCHI_STORAGE_DEPS=swift,test-swift
     file: GNOCCHI_STORAGE_DEPS=file
     redis: GNOCCHI_STORAGE_DEPS=redis
     s3: GNOCCHI_STORAGE_DEPS=s3
+
+    # FIXME(sileht): pbr doesn't support url in setup.cfg extras, so we do this crap
+    GNOCCHI_TEST_TARBALLS=http://tarballs.openstack.org/swift/swift-master.tar.gz#egg=swift
+    ceph: GNOCCHI_TEST_TARBALLS=
+    swift: GNOCCHI_TEST_TARBALLS=http://tarballs.openstack.org/swift/swift-master.tar.gz#egg=swift
+    s3: GNOCCHI_TEST_TARBALLS=
+    redis: GNOCCHI_TEST_TARBALLS=
+    file: GNOCCHI_TEST_TARBALLS=
 deps = .[test]
    postgresql: .[postgresql,{env:GNOCCHI_STORAGE_DEPS}]
    mysql: .[mysql,{env:GNOCCHI_STORAGE_DEPS}]
+   {env:GNOCCHI_TEST_TARBALLS:}
 # NOTE(tonyb): This project has chosen to *NOT* consume upper-constraints.txt
 commands =
     doc8 --ignore-path doc/source/rest.rst doc/source
     gnocchi-config-generator
     {toxinidir}/run-tests.sh {posargs}
+    {toxinidir}/run-func-tests.sh {posargs}
 
 [testenv:py35-postgresql-file-upgrade-from-3.1]
 # We should always recreate since the script upgrade
@@ -76,7 +86,7 @@ commands = flake8
 [testenv:py27-gate]
 setenv = OS_TEST_PATH=gnocchi/tests/functional_live
          GABBI_LIVE=1
-passenv = {[testenv]passenv} GNOCCHI_SERVICE*
+passenv = {[testenv]passenv} GNOCCHI_SERVICE* GNOCCHI_AUTHORIZATION
 sitepackages = True
 basepython = python2.7
 commands = {toxinidir}/tools/pretty_tox.sh '{posargs}'
