--- a/tox.ini
+++ b/tox.ini
@@ -35,12 +35,14 @@ commands =
 [testenv:py35-postgresql-file-upgrade-from-3.0]
 # We should always recreate since the script upgrade
 # Gnocchi we can't reuse the virtualenv
+# FIXME(sileht): We set alembic version until next Gnocchi 3.0 is released
 envdir = upgrade
 recreate = True
 skip_install = True
 usedevelop = False
 setenv = GNOCCHI_VARIANT=test,postgresql,file
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=3.0,<3.1
+  alembic<0.9.0
   pifpaf>=0.13
   gnocchiclient>=2.8.0
 commands = pifpaf --env-prefix INDEXER run postgresql {toxinidir}/run-upgrade-tests.sh {posargs}
@@ -48,12 +50,14 @@ commands = pifpaf --env-prefix INDEXER run postgresql {toxinidir}/run-upgrade-te
 [testenv:py27-mysql-ceph-upgrade-from-3.0]
 # We should always recreate since the script upgrade
 # Gnocchi we can't reuse the virtualenv
+# FIXME(sileht): We set alembic version until next Gnocchi 3.0 is released
 envdir = upgrade
 recreate = True
 skip_install = True
 usedevelop = False
 setenv = GNOCCHI_VARIANT=test,mysql,ceph,ceph_recommended_lib
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=3.0,<3.1
+  alembic<0.9.0
   gnocchiclient>=2.8.0
   pifpaf>=0.13
 commands = pifpaf --env-prefix INDEXER run mysql -- pifpaf --env-prefix STORAGE run ceph {toxinidir}/run-upgrade-tests.sh {posargs}
