--- a/setup.cfg
+++ b/setup.cfg
@@ -28,13 +28,13 @@ mysql =
     oslo.db>=4.8.0,!=4.13.1,!=4.13.2,!=4.15.0
     sqlalchemy
     sqlalchemy-utils
-    alembic>=0.7.6,!=0.8.1
+    alembic>=0.7.6,!=0.8.1,!=0.9.0
 postgresql =
     psycopg2
     oslo.db>=4.8.0,!=4.13.1,!=4.13.2,!=4.15.0
     sqlalchemy
     sqlalchemy-utils
-    alembic>=0.7.6,!=0.8.1
+    alembic>=0.7.6,!=0.8.1,!=0.9.0
 swift =
     python-swiftclient>=3.1.0
     msgpack-python
