--- a/tox.ini
+++ b/tox.ini
@@ -116,6 +116,7 @@ deps = .[mysql,postgresql,test,file,ceph,swift,s3]
 commands = gnocchi-config-generator
 
 [testenv:docs]
+basepython = python2.7
 # This does not work, see: https://bitbucket.org/hpk42/tox/issues/302
 # deps = {[testenv]deps}
 #        .[doc]
@@ -126,6 +127,7 @@ commands = doc8 --ignore-path doc/source/rest.rst doc/source
            pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python setup.py build_sphinx
 
 [testenv:docs-gnocchi.xyz]
+basepython = python2.7
 deps = .[file,postgresql,test,doc]
        sphinx_rtd_theme
        sphinxcontrib-versioning
