--- a/gnocchi/tests/functional_live/gabbits/live.yaml
+++ b/gnocchi/tests/functional_live/gabbits/live.yaml
@@ -647,19 +647,21 @@ tests:
       data:
         =:
           id: "cd9eef"
-
+      status: 200
+      response_json_paths:
+          $.`len`: 0
 
     - name: delete myresource resource
-      DELETE: /v1/resource/generic/2ae35573-7f9f-4bb1-aae8-dad8dff5706e
+      DELETE: /v1/resource/myresource/2ae35573-7f9f-4bb1-aae8-dad8dff5706e
       status: 204
 
       # assert resource is really deleted
     - name: assert resource resource is deleted
-      GET: /v1/resource/generic/2ae35573-7f9f-4bb1-aae8-dad8dff5706e
+      GET: /v1/resource/myresource/2ae35573-7f9f-4bb1-aae8-dad8dff5706e
       status: 404
 
     - name: post myresource resource no data
-      POST: /v1/resource/generic
+      POST: /v1/resource/myresource
       request_headers:
           content-type: application/json
       status: 400
