tox: factorize docs dependencies
This has been fixed in tox 2.4.

Change-Id: I040bd1a12ade7a255e0d52c2c1fb6ff61be007d9

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-minversion = 1.8
+minversion = 2.4
 envlist = py{35,27}-{postgresql,mysql}{,-file,-swift,-ceph,-s3},pep8,bashate
 
 [testenv]
@@ -117,10 +117,11 @@ commands = gnocchi-config-generator
 
 [testenv:docs]
 basepython = python2.7
-# This does not work, see: https://bitbucket.org/hpk42/tox/issues/302
+## This does not work, see: https://github.com/tox-dev/tox/issues/509
 # deps = {[testenv]deps}
-#        .[doc]
-deps = .[test,postgresql,file,doc]
+#        .[postgresql,doc]
+# setenv = GNOCCHI_STORAGE_DEPS=file
+deps = .[test,file,postgresql,doc]
 setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
          GNOCCHI_TEST_INDEXER_DRIVER=postgresql
 commands = doc8 --ignore-path doc/source/rest.rst doc/source
@@ -128,7 +129,8 @@ commands = doc8 --ignore-path doc/source/rest.rst doc/source
 
 [testenv:docs-gnocchi.xyz]
 basepython = python2.7
-deps = .[file,postgresql,test,doc]
+setenv = GNOCCHI_STORAGE_DEPS=file
+deps = {[testenv:docs]deps}
        sphinxcontrib-versioning
 # for 2.x doc
        pytimeparse
