doc: fix deps for old version
Change-Id: I0d2cb10afc8e5ca17cc95ee6c9fb9de347808ba5

--- a/tox.ini
+++ b/tox.ini
@@ -133,5 +133,8 @@ deps = .[file,postgresql,test,doc]
 # for 2.x doc
        pytimeparse
        retrying
+# for 3.x doc
+       sphinx_rtd_theme
+       oslosphinx
 commands =
     pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- sphinx-versioning build doc/source doc/build/html
