Limit Sphinx to <1.6.0
(cherry picked from commit 86694d656ce8b66be172603537be4dd57983a5e1)

--- a/setup.cfg
+++ b/setup.cfg
@@ -59,7 +59,7 @@ file =
     tooz>=1.38
 doc =
     oslosphinx>=2.2.0
-    sphinx
+    sphinx<1.6.0
     sphinxcontrib-httpdomain
     PyYAML
     Jinja2
