--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,10 @@ env:
 
   - TARGET: py27-mysql
   - TARGET: py35-mysql
+  - TARGET: py36-mysql
   - TARGET: py27-postgresql
   - TARGET: py35-postgresql
+  - TARGET: py36-postgresql
 
 before_script:
 # Travis We need to fetch all tags/branches for documentation target
