--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,9 @@ classifier =
     Programming Language :: Python
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7
+    Programming Language :: Python :: 3
     Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
     Topic :: System :: Monitoring
 
 [extras]
