--- a/setup.cfg
+++ b/setup.cfg
@@ -4,11 +4,9 @@ url = http://launchpad.net/gnocchi
 summary = Metric as a Service
 description-file =
     README.rst
-author = OpenStack
-author-email = openstack-dev@lists.openstack.org
+author = Gnocchi developers
 home-page = http://gnocchi.xyz
 classifier =
-    Environment :: OpenStack
     Intended Audience :: Information Technology
     Intended Audience :: System Administrators
     License :: OSI Approved :: Apache Software License
@@ -16,6 +14,7 @@ classifier =
     Programming Language :: Python
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7
+    Programming Language :: Python :: 3
     Programming Language :: Python :: 3.5
     Topic :: System :: Monitoring
 
