--- a/setup.cfg
+++ b/setup.cfg
@@ -54,7 +54,7 @@ file =
     tooz>=1.38
 doc =
     oslosphinx>=2.2.0
-    sphinx
+    sphinx<1.6
     sphinxcontrib-httpdomain
     PyYAML
     Jinja2
